--- a/Contact Information.html
+++ b/Contact Information.html
@@ -15,19 +15,16 @@
                 <h1 class="navbar_heading">Portfolio</h1>   
             </div>
             <div class="navbar_btn">
+                <a href="My Website.html"><button class="button">Home</button></a>
                 <a href="My Work.html"><button class="button">My work</button></a>
-                <a href="Contact Information.html"><button class="button">Contact information</button></a>
+                <a href="My Website.html"><button class="button">Contact information</button></a>
             </div>
         </div>
         <hr>
         <!--hero-->
         <div class="hero">
             <div>
-                <img src="Hanna.jpg" alt="">
-            </div>
-            <div class="teksti">
-                
-                <h4> Hanna Tuominen | Tietojen käsittely tradenomi</h4>
+            
 
             </div>
         </div>
