--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <section class="home" id="home">
             <div class="home-content">
-                <h3>Porfolio</h3>
+                <h3>Portfolio</h3>
                 <h1>Hanna Tuominen</h1>
                 <h3>Bachelor of business admistarion - BBA, <span>Business Information Technology</span></h3>
             </div>
@@ -52,6 +52,55 @@
                         <a href="#"><i class='bx bx-link-external'></i></a>
                     </div>
                 </div>
+
+                <div class="porfolio-box">
+                    <img src="portfolio2.jpg" alt="">
+                    <div class="portfolio-layer">
+                        <h4>Digital Art</h4>
+                        <a href="#"><i class='bx bx-link-external'></i></a>
+                    </div>
+                </div>
+
+                <div class="porfolio-box">
+                    <img src="portfolio7.png" alt="">
+                    <div class="portfolio-layer">
+                        <h4>JS Caucilator</h4>
+                        <a href="#"><i class='bx bx-link-external'></i></a>
+                    </div>
+                </div>
+
+                <div class="porfolio-box">
+                    <img src="portfolio6.png" alt="">
+                    <div class="portfolio-layer">
+                        <h4>Web Desing</h4>
+                        <a href="#"><i class='bx bx-link-external'></i></a>
+                    </div>
+                </div>
+
+                <div class="porfolio-box">
+                    <img src="portfolio4.png" alt="">
+                    <div class="portfolio-layer">
+                        <h4>Web Desing</h4>
+                        <a href="#"><i class='bx bx-link-external'></i></a>
+                    </div>
+                </div>
+
+                <div class="porfolio-box">
+                    <img src="portfolio5.png" alt="">
+                    <div class="portfolio-layer">
+                        <h4>Wed Desing</h4>
+                        <a href="#"><i class='bx bx-link-external'></i></a>
+                    </div>
+                </div>
+
+                <div class="porfolio-box">
+                    <img src="portfolio3.png" alt="">
+                    <div class="portfolio-layer">
+                        <h4>Game Desing</h4>
+                        <a href="#"><i class='bx bx-link-external'></i></a>
+                    </div>
+                </div>
+
             </div>
         </section>
 
