--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="porfolio-box">
                     <img src="glitch.jpg" alt="">
                     <div class="portfolio-layer">
-                        <h4>JS Caucilator</h4>
+                        <h4>JS Calculator</h4>
                         <a href="#"><i class='bx bx-link-external'></i></a>
                     </div>
                 </div>
