--- a/index.html
+++ b/index.html
@@ -100,17 +100,29 @@
         <!--Contact section-->
 
         <section class="contact" id="contact">
-            <h2 class="heading">Contact<spa>Information</spa></h2>
+            <h2 class="heading">Contact<span> Information</span></h2>
 
-            <div class="social-mendia">
-                <a href="#"><i class='bx bxl-github'></i></a>
-                <a href="#"><i class='bx bxl-instagram' ></i></a>
-                <a href="#"><i class='bx bxl-linkedin' > </i></a>
-                <a href="#"><i class='bx bx-envelope' > hanna.tuominen97@gmail.com</i></a>
+            <div class="social-media">
+                <a href="https://github.com/KnockOut29"><i class='bx bxl-github'></i></a>
+                <a href="https://www.instagram.com/_knock_out__/"><i class='bx bxl-instagram' ></i></a>
+                <a href="https://www.linkedin.com/in/hanna-tuominen-43501b22a/"><i class='bx bxl-linkedin' > </i></a>
+                <a href="#"><i class='bx bx-envelope' > </i></a>
 
             </div>
 
         </section>
+
+        <!--Footer-->
+
+        <footer class="footer">
+            <div class="footer-text">
+                <p>Image by rawpixel.com on Freepik</p>
+            </div>
+            
+            <div class="footer-iconTop">
+                <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
+            </div>
+        </footer>
 
        
 
