--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="home-content">
                 <h3>Portfolio</h3>
                 <h1>Hanna Tuominen</h1>
-                <h3>Bachelor of business admistarion - BBA, <span>Business Information Technology</span></h3>
+                <h3>Bachelor of business admistarion - BBA, <span class="multiple-text"></span></h3>
             </div>
 
             <div class="home-img">
@@ -124,7 +124,12 @@
             </div>
         </footer>
 
-       
+       <!--scroll reveal-->
+       <script src="https://unpkg.com/scrollreveal"></script>
+
+       <!--Typed JS-->
+
+       <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 
         <script src="JS app.js"></script>
     </body>
