--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <img src="glitch.jpg" alt="">
                     <div class="portfolio-layer">
                         <h4>Digital Art</h4>
-                        <a href="#"><i class='bx bx-link-external'></i></a>
+                        <a href="art.html"><i class='bx bx-link-external'></i></a>
                     </div>
                 </div>
 
@@ -58,7 +58,7 @@
                     <img src="glitch.jpg" alt="">
                     <div class="portfolio-layer">
                         <h4>JS Calculator</h4>
-                        <a href="#"><i class='bx bx-link-external'></i></a>
+                        <a href="laskin.html"><i class='bx bx-link-external'></i></a>
                     </div>
                 </div>
 
@@ -66,7 +66,7 @@
                     <img src="glitch.jpg" alt="">
                     <div class="portfolio-layer">
                         <h4>Web Desing</h4>
-                        <a href="#"><i class='bx bx-link-external'></i></a>
+                        <a href="web.html"><i class='bx bx-link-external'></i></a>
                     </div>
                 </div>
 
@@ -74,23 +74,16 @@
                     <img src="glitch.jpg" alt="">
                     <div class="portfolio-layer">
                         <h4>Web Desing</h4>
-                        <a href="#"><i class='bx bx-link-external'></i></a>
+                        <a href="chat.html"><i class='bx bx-link-external'></i></a>
                     </div>
                 </div>
 
-                <div class="porfolio-box">
-                    <img src="glitch.jpg" alt="">
-                    <div class="portfolio-layer">
-                        <h4>Wed Desing</h4>
-                        <a href="#"><i class='bx bx-link-external'></i></a>
-                    </div>
-                </div>
 
                 <div class="porfolio-box">
                     <img src="glitch.jpg" alt="">
                     <div class="portfolio-layer">
                         <h4>Game Desing</h4>
-                        <a href="#"><i class='bx bx-link-external'></i></a>
+                        <a href="game.html"><i class='bx bx-link-external'></i></a>
                     </div>
                 </div>
 
