--- a/game.html
+++ b/game.html
@@ -225,7 +225,7 @@
                       hx[i] = ux;
                       hy[i] = uy;
                       //Ja pisteestä vihreä
-                      Hae(hx[i], hy[i]).bgColor = "orange";
+                      Hae(hx[i], hy[i]).bgColor = "purple";
                   }
                   //Asetusten näyttö ja piilotus (ks. https://www.ohjelmointiputka.net/koodivinkit/23850-javascript-tekstin-piilotus-n%C3%A4ytt%C3%B6 )
                   function AsetuksetNP() {
